--- a/static_data/public/Events.html
+++ b/static_data/public/Events.html
@@ -21,7 +21,12 @@
         <script>fillFriendList()</script>
         <textarea rows="10" cols="50" id="eventDescription"> Description </textarea><br>
         <button class="myButton" onclick="eventer()">SEND</button>
-        <button class="myButton" onclick="goHome()">BACK</button>
+        <ul>
+                <li><a  href="AfterLogin.html">Home</a></li>
+                <li><a href="Friends.html">Friend Zone</a></li>
+                <li><a class="active" href="Events.html">Create Event</a></li>
+                <li><a href="RealIndex.html">Log Off</a></li>
+        </ul>
 
 </body>
 </html>
