--- a/static_data/public/Friends.html
+++ b/static_data/public/Friends.html
@@ -15,7 +15,12 @@
 <div id ="addedMe">
 </div>
 
-<button class="myButton" onclick="goHome()">Back</button>
+<ul>
+    <li><a  href="AfterLogin.html">Home</a></li>
+    <li><a class="active" href="Friends.html">Friend Zone</a></li>
+    <li><a  href="Events.html">Create Event</a></li>
+    <li><a href="RealIndex.html">Log Off</a></li>
+</ul>
 
 </body>
 </head>
