--- a/static_data/public/AfterLogin.html
+++ b/static_data/public/AfterLogin.html
@@ -3,23 +3,32 @@
 <head>
 </head>
 
-    <script src="AfterLogin.js"></script>
-    <link rel="stylesheet" href="UI.css">
-    <meta charset="UTF-8">
-    <title>Main Menu</title>
+<script src="AfterLogin.js"></script>
+<link rel="stylesheet" href="UI.css">
+<meta charset="UTF-8">
+<title>Main Menu</title>
 
-    <body background="Website%20Backgrounds.jpg">
-    <div id="myEvents">
-        My Events:
+<body background="Website%20Backgrounds.jpg">
+<div id="myEvents">
 
-    </div>
-    <script> addMyEvents();</script>
+</div>
+<script> addMyEvents();</script>
 
-    <div class="bottom">
-    <button class="myButton" onclick="goToFriends()">Friend Zone </button>
-        <button class="myButton" onclick="goToEvents()">createEvent</button>
-    <button class="myButton" onclick="disconnect()">Log Off</button>
-    </div>
+<!--<div class = "bottomwrap">-->
+    <!--<div class="bottom">-->
+        <!--<button class="myButton" onclick="goToFriends()">Friend Zone </button>-->
+        <!--<button class="myButton" onclick="goToEvents()">createEvent</button>-->
+        <!--<button class="myButton" onclick="disconnect()">Log Off</button>-->
+    <!--</div>-->
+<!--</div>-->
+
+<ul>
+    <li><a class="active" href="AfterLogin.html">Home</a></li>
+    <li><a  href="Friends.html">Friend Zone</a></li>
+    <li><a href="Events.html">Create Event</a></li>
+    <li><a href="RealIndex.html">Log Off</a></li>
+</ul>
+
 </body>
 
 
