--- a/static_data/public/AfterLogin.html
+++ b/static_data/public/AfterLogin.html
@@ -9,26 +9,28 @@
 <title>Main Menu</title>
 
 <body background="Website%20Backgrounds.jpg">
-<div id="myEvents">
+<script>authenticate();</script>
+<div id="yesPass">
+    <div id="myEvents">
 
-</div>
-<script> addMyEvents();</script>
+    </div>
+    <script> addMyEvents();</script>
 
-<!--<div class = "bottomwrap">-->
+    <!--<div class = "bottomwrap">-->
     <!--<div class="bottom">-->
-        <!--<button class="myButton" onclick="goToFriends()">Friend Zone </button>-->
-        <!--<button class="myButton" onclick="goToEvents()">createEvent</button>-->
-        <!--<button class="myButton" onclick="disconnect()">Log Off</button>-->
+    <!--<button class="myButton" onclick="goToFriends()">Friend Zone </button>-->
+    <!--<button class="myButton" onclick="goToEvents()">createEvent</button>-->
+    <!--<button class="myButton" onclick="disconnect()">Log Off</button>-->
     <!--</div>-->
-<!--</div>-->
+    <!--</div>-->
 
-<ul>
-    <li><a class="active" href="AfterLogin.html">Home</a></li>
-    <li><a  href="Friends.html">Friend Zone</a></li>
-    <li><a href="Events.html">Create Event</a></li>
-    <li><a href="RealIndex.html">Log Off</a></li>
-</ul>
-
+    <ul>
+        <li><a class="active" href="AfterLogin.html">Home</a></li>
+        <li><a  href="Friends.html">Friend Zone</a></li>
+        <li><a href="Events.html">Create Event</a></li>
+        <li><a href="Home.html">Log Off</a></li>
+    </ul>
+</div>
 </body>
 
 
