--- a/static_data/public/Events.html
+++ b/static_data/public/Events.html
@@ -13,6 +13,8 @@
 
 <body background="Website%20Backgrounds.jpg">
 
+<script>authenticate();</script>
+<div id="yesPass">
         What <input type="text" id="eventName"><br>
         Where <input type="text" id="eventLoc"><br>
         When <input type="datetime-local" id="eventDate"><br>
@@ -25,8 +27,8 @@
                 <li><a  href="AfterLogin.html">Home</a></li>
                 <li><a href="Friends.html">Friend Zone</a></li>
                 <li><a class="active" href="Events.html">Create Event</a></li>
-                <li><a href="RealIndex.html">Log Off</a></li>
+                <li><a href="Home.html">Log Off</a></li>
         </ul>
-
+        </div>
 </body>
 </html>
