--- a/static_data/public/Friends.html
+++ b/static_data/public/Friends.html
@@ -8,6 +8,8 @@
     <title>Friend Zone</title>
 
 <body background="Website%20Backgrounds.jpg">
+<script>authenticate();</script>
+<div id="yesPass">
 <h3>Add Friend:</h3>
 <input type="text" id="friendRequestName"><button onclick="sendFriendRequest()" class="myButton">Send</button>
 
@@ -19,9 +21,10 @@
     <li><a  href="AfterLogin.html">Home</a></li>
     <li><a class="active" href="Friends.html">Friend Zone</a></li>
     <li><a  href="Events.html">Create Event</a></li>
-    <li><a href="RealIndex.html">Log Off</a></li>
+    <li><a href="Home.html">Log Off</a></li>
 </ul>
 
+</div>
 </body>
 </head>
 
