Events Now showing on feed

--- a/static_data/public/Friends.html
+++ b/static_data/public/Friends.html
@@ -13,7 +13,7 @@
 <h3>Add Friend:</h3>
 <input type="text" id="friendRequestName"><button onclick="sendFriendRequest()" class="myButton">Send</button>
 
-<h3>People who added me:    <button onclick="refreshFriendRequests()" class="myButton">Refresh</button></h3>
+    <h3><span id="requestNum"> </span> Friend request(s):</h3>
 <div id ="addedMe">
 </div>
 
