--- a/static_data/public/AfterLogin.html
+++ b/static_data/public/AfterLogin.html
@@ -3,7 +3,11 @@
 <head>
 </head>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="AfterLogin.js"></script>
+
 <link rel="stylesheet" href="UI.css">
 <meta charset="UTF-8">
 <title>Main Menu</title>
@@ -11,18 +15,58 @@
 <body background="Website%20Backgrounds.jpg">
 <script>authenticate();</script>
 <div id="yesPass">
+
+    <div id="test">
+
+    </div>
+
     <div id="myEvents">
 
     </div>
     <script> addMyEvents();</script>
 
-    <!--<div class = "bottomwrap">-->
-    <!--<div class="bottom">-->
-    <!--<button class="myButton" onclick="goToFriends()">Friend Zone </button>-->
-    <!--<button class="myButton" onclick="goToEvents()">createEvent</button>-->
-    <!--<button class="myButton" onclick="disconnect()">Log Off</button>-->
-    <!--</div>-->
-    <!--</div>-->
+
+
+    <script type="text/jsx">
+        class Clock extends React.Component {
+            constructor(props) {
+                super(props);
+                this.state = {date: new Date()};
+            }
+
+            componentDidMount() {
+                this.timerID = setInterval(
+                    () => this.tick(),
+                    1000
+                );
+            }
+
+            componentWillUnmount() {
+                clearInterval(this.timerID);
+            }
+
+            tick() {
+                this.setState({
+                    date: new Date()
+                });
+            }
+
+            render() {
+                return (
+                        <div>
+                            <h2>It is {this.state.date.toLocaleTimeString()}.</h2>
+                        </div>
+                );
+            }
+        }
+
+        React.render(
+                <Clock />,
+            document.getElementById('test')
+        );
+
+    </script>
+
 
     <ul>
         <li><a class="active" href="AfterLogin.html">Home</a></li>
