--- a/static_data/public/Friends.html
+++ b/static_data/public/Friends.html
@@ -23,13 +23,12 @@
     </div>
 </div>
 
-    <ul>
-        <li><a  href="AfterLogin.html">Home</a></li>
-        <li><a class="active" href="Friends.html">Friend Zone</a></li>
-        <li><a  href="Events.html">Create Event</a></li>
-        <li><a href="Home2.html">Log Off</a></li>
-    </ul>
-
+<ul class="navbarUl">
+    <li class="navbarLi"><a  href="AfterLogin.html">Home</a></li>
+    <li class="navbarLi"><a class="active"href="Friends.html">Friend Zone</a></li>
+    <li class="navbarLi"><a  href="Events.html">Create Event</a></li>
+    <li class="navbarLi"><a href="Home2.html">Log Off</a></li>
+</ul>
 </div>
 </body>
 </head>
