--- a/static_data/public/Events.html
+++ b/static_data/public/Events.html
@@ -69,10 +69,11 @@
         </div>
 </div>
 <ul class="navbarUl">
-        <li class="navbarLi"><a  href="AfterLogin.html">Home</a></li>
+        <li class="navbarLi"><a  href="AfterLogin.html">My Events</a></li>
+        <li class="navbarLi"><a href=FindEvents.html">Find Event</a></li>
         <li class="navbarLi"><a href="Friends.html">Friend Zone</a></li>
         <li class="navbarLi"><a class="active" href="Events.html">Create Event</a></li>
-        <li class="navbarLi"><a href="Home2.html">Log Off</a></li>
+        <li class="navbarLi"><a href="Home2.html">Log Out</a></li>
 </ul>
 </body>
 </html>
