--- a/static_data/public/Friends.html
+++ b/static_data/public/Friends.html
@@ -24,10 +24,11 @@
 </div>
 
 <ul class="navbarUl">
-    <li class="navbarLi"><a  href="AfterLogin.html">Home</a></li>
+    <li class="navbarLi"><a  href="AfterLogin.html">My Events</a></li>
+    <li class="navbarLi"><a href="Friends.html">Find Event</a></li>
     <li class="navbarLi"><a class="active"href="Friends.html">Friend Zone</a></li>
     <li class="navbarLi"><a  href="Events.html">Create Event</a></li>
-    <li class="navbarLi"><a href="Home2.html">Log Off</a></li>
+    <li class="navbarLi"><a href="Home2.html">Log Out</a></li>
 </ul>
 </div>
 </body>
