--- a/static_data/public/AfterLogin.html
+++ b/static_data/public/AfterLogin.html
@@ -31,10 +31,11 @@
     </div>
 
     <ul class="navbarUl">
-        <li class="navbarLi"><a class="active" href="AfterLogin.html">Home</a></li>
+        <li class="navbarLi"><a class="active" href="AfterLogin.html">My Events</a></li>
+        <li class="navbarLi"><a href="FindEvents.html">Find Event</a></li>
         <li class="navbarLi"><a href="Friends.html">Friend Zone</a></li>
         <li class="navbarLi"><a  href="Events.html">Create Event</a></li>
-        <li class="navbarLi"><a href="Home2.html">Log Off</a></li>
+        <li class="navbarLi"><a href="Home2.html">Log Out</a></li>
     </ul>
 </div>
 </body>
