--- a/static_data/public/Events.html
+++ b/static_data/public/Events.html
@@ -7,9 +7,9 @@
 
 
 <script src="AfterLogin.js"></script>
-<link rel="stylesheet" href="UI.css">
-<link rel="stylesheet" href="Home2.css">
-<script src="Home2.js"></script>
+<link rel="stylesheet" href="GlobalUI.css">
+<link rel="stylesheet" href="Home.css">
+<script src="Home.js"></script>
 <meta charset="UTF-8">
 <title>Friend Zone</title>
 
@@ -30,7 +30,7 @@
                         Where <input type="text" id="eventLoc"><br>
                         When <input type="datetime-local" id="eventDate"><br>
                         Picture <input type="text" id="eventPic"><br>
-                        Who <select id="friendSelect"></select><button class="myButton" onclick="addFriendToEvent()" id="friendButton">Add</button> <br>
+                        Who <select id="friendSelect"></select><button class="myButton" onclick="addFriendToEvent('Private')" id="friendButton">Add</button> <br>
                         <script>fillFriendList()</script>
                         <textarea rows="10" cols="50" id="eventDescription"> Description </textarea><br>
                         <button class="myButton" onclick="eventer()">SEND</button>
@@ -61,7 +61,7 @@
                                 </div>
                         </div>
                         Amount of participants <input id="publicEventMaxPartici"><br>
-                        Who <select id="publicEventfriendSelect"></select><button class="myButton" onclick="addFriendToEvent()" id="friendButton">Add</button> <br>
+                        Who <select id="publicEventfriendSelect"></select><button class="myButton" onclick="addFriendToEvent('Public')" id="friendButton">Add</button> <br>
                         <textarea rows="10" cols="50" id="publicEventDescription"> Description </textarea><br>
                         <button class="myButton" onclick="publicEventer()">SEND</button>
                         <br><br><br><br><br>
@@ -73,7 +73,7 @@
         <li class="navbarLi"><a href=FindEvents.html">Find Event</a></li>
         <li class="navbarLi"><a href="Friends.html">Friend Zone</a></li>
         <li class="navbarLi"><a class="active" href="Events.html">Create Event</a></li>
-        <li class="navbarLi"><a href="Home2.html">Log Out</a></li>
+        <li class="navbarLi"><a href="Home.html" onclick="deleteCookie()">Log Out</a></li>
 </ul>
 </body>
 </html>
