--- a/static_data/public/Events.html
+++ b/static_data/public/Events.html
@@ -33,7 +33,7 @@
                         Who <select id="friendSelect"></select><button class="myButton" onclick="addFriendToEvent('Private')" id="friendButton">Add</button> <br>
                         <script>fillFriendList()</script>
                         <textarea rows="10" cols="50" id="eventDescription"> Description </textarea><br>
-                        <button class="myButton" onclick="eventer()">SEND</button>
+                        <button class="myButton" onclick="privateEventer()">SEND</button>
                         <br><br><br><br><br>
                 </div>
                 <div id="public" style="display:none">
