--- a/static_data/public/Home.html
+++ b/static_data/public/Home.html
@@ -117,6 +117,7 @@
                     }
 
                     previewFile();
+                    initConnection();
                 </script>
                 <img src="" height="200">
 
